# gen-ai-world-models

./: .gitignore  README.md  main.py  pyproject.toml
experiments/: antmaze_sac_baseline.py  explore_antmaze.py
experiments/diffusion/: antmaze_3m_progress.py  antmaze_dataset.py  eval_antmaze.py  eval_mismatch.py  evaluate.py  exploration_metrics.py  temporal_unet.py  train_antmaze.py  trajectory_diffusion.py  trajectory_trainer.py
models/: README.md  antmaze-3mp-div-ghjNo8ao-1680000.pt  antmaze-3mp-um-UivKS98z-1760000.pt  antmaze-Hn5Trrg9-980000.pt  antmaze-SkNj4TtS-980000.pt  antmaze-dfzn-div-4P2d3MVU-1860000.pt  antmaze-dfzn-um-JzsoFayH-1820000.pt  antmaze-online-div-nNGrBQbL-880000.pt  antmaze-online-um-UybTv5X5-880000.pt
scripts/: antmaze_diffusion.slurm  antmaze_diffusion_all.slurm  finetune_all.slurm  finetune_dfzn_continue.slurm  online_scratch.slurm
slurm/: antmaze_sac_baseline.slurm  finetune_3mp.slurm  finetune_3mp_continue.slurm  finetune_3mp_ononline.slurm  finetune_test.slurm
