[project]
name = "gen-ai-world-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.2",
    "gymnasium-robotics",
    "h5py>=3.0",
    "mujoco>=2.2.0,<=3.5.0",
    "requests>=2.0",
    "rich>=15.0.0",
    "shortuuid>=1.0.13",
    "stable-baselines3>=2.3.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "tqdm>=4.67.3",
    "wandb>=0.25.1",
]

[tool.uv.sources]
gymnasium-robotics = { git = "https://github.com/Farama-Foundation/Gymnasium-Robotics.git" }

torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
